# VS-CMake-GLFW-GLAD

./: CMakeLists.txt
src/: main.cpp
